--- a/public/map.html
+++ b/public/map.html
@@ -4,14 +4,124 @@
 	<meta charset="utf-8">
 	<title>Device Aware Building - WEB</title>
 
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/map.css">
 </head>
 <body>
 	<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDiI8jM9QRW9Zz2OxPSh4Jnu2575zIgiRw&sensor=false&extension=.js'></script>
 	<script src='js/map.js'></script>
 
-	<div id='map'></div>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Device Aware Building - WEB</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Feed dos sensores</a></li>
+					<li><a href="#about">Sobre</a></li>
+					<li><a href="#contact">Contato</a></li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+	</nav>
 
+	<div class="container main-stuff">
+		<div class="row">
+			<div class="col-md-8">
+				<div id='map'></div>
+			</div>
+			<div class="col-md-4">
+				<div class="panel panel-success">
+					<div class="panel-heading">
+						<h3 class="panel-title">Sensor 1 - Lita Aula</h3>
+					</div>
+					<div class="panel-body">
+						<table class="table">
+						<thead>
+							<tr>
+								<th>dBm</th>
+								<th>MAC</th>
+								<th>Fabricante</th>
+								</tr>
+							</thead>
+							<tbody>
+							<tr>
+								<td>-47</td>
+								<td>06:27:22:b3:e5:fb</td>
+								<td>ubiquiti</td>
+							</tr>
+							<tr>
+								<td>-55</td>
+								<td>30:cd:a7:cb:05:93</td>
+								<td>SamsungE_cb:05:93</td>
+							</tr>
+							<tr>
+								<td>-57</td>
+								<td>b8:ae:6e:9f:0d:e9</td>
+								<td>Nintendo_9f:0d:e9</td>
+							</tr>
+							<tr>
+								<!-- "9c:99:a0:d0:ef:f7","9c:99:a0:d0:ef:f7","9c:99:a0:d0:ef:f7","9c:99:a0:d0:ef:f7","-69,-69",
+								"9c:99:a0:d0:ef:f7","9c:99:a0:d0:ef:f7","9c:99:a0:d0:ef:f7","9c:99:a0:d0:ef:f7","-49,-49",-->
+								<td>-69</td>
+								<td>9c:99:a0:d0:ef:f7</td>
+								<td>XIAOMI INC</td>
+							</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="panel panel-info">
+					<div class="panel-heading">
+						<h3 class="panel-title">Sensor 2 - Lita Salão</h3>
+					</div>
+					<div class="panel-body">
+						<table class="table">
+						<thead>
+							<tr>
+								<th>dBm</th>
+								<th>MAC</th>
+								<th>Fabricante</th>
+								</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>-31</td>
+								<td>b8:27:eb:80:c3:26</td>
+								<td>Raspberr_80:c3:26</td>
+							</tr>
+							<tr>
+								<td>-49</td>
+								<td>06:27:22:b3:e5:fe</td>
+								<td>ubiquiti</td>
+							</tr>
+							<tr>
+								<!-- "30:75:12:ea:c8:45","SonyMobi_ea:c8:45","30:75:12:ea:c8:45","SonyMobi_ea:c8:45","-61","DIRECT-1RLG HT 3D" -->
+								<td>-61</td>
+								<td>30:75:12:ea:c8:45</td>
+								<td>SonyMobi_ea:c8:45</td>
+							</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div  class="container foot">
+		<hr>
+		<footer>
+			<p>by luis-puhl</p>
+		</footer>
+	</div>
+<!--
 	<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 	<script src="js/socket.js"></script>
 	<script>
@@ -19,5 +129,6 @@
 			fun();
 		})();
 	</script>
+-->
 </body>
 </html>
