--- a/public/websocket.org-test.html
+++ b/public/websocket.org-test.html
@@ -31,7 +31,7 @@
 
   function onMessage(evt) {
     writeToScreen('<span style="color: blue;">RESPONSE: ' + evt.data+'</span>');
-    websocket.close();
+    // websocket.close();
   }
 
   function onError(evt) {
