Now MQTT-WS is working duplex :tada:

--- a/public/websocket.org-test.html
+++ b/public/websocket.org-test.html
@@ -23,6 +23,7 @@
   function onOpen(evt) {
     writeToScreen("CONNECTED");
     doSend("WebSocket rocks");
+    doSend('{"mqtt":{"topic":"dab/admin","message":"echo"}}');
   }
 
   function onClose(evt) {
